2009-03-05  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24389
        WebKitGTK+ crashes when cancelling plugin loads

        Remove bogus calls to the client's didFinishLoading method from
        our ResourceHandle::cancel implementation. Calling
        didFinishLoading here is mostly inoffensive for most loads, but
        causes crashes when plugin loads are cancelled.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::ResourceHandle::cancel):

2009-03-05  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix.
        
        * WebCore.vcproj/QTMovieWin.vcproj:

2009-03-05  Adam Treat  <adam.treat@torchmobile.com>

        Build fix for when ENABLE_NETSCAPE_PLUGIN_API = 0.  The method
        ScriptController::jsObjectForPluginElement(HTMLPlugInElement*); is not
        protected by an #if and uses HTMLPlugInElement so it must be included.

        * bindings/js/ScriptController.cpp:

2009-03-05  Dimitri Glazkov  <dglazkov@chromium.org>

        GTK Build fix.

        * inspector/ConsoleMessage.h: Use proper header.

2009-03-05  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Timothy Hatcher.

        https://bugs.webkit.org/show_bug.cgi?id=24376
        Split InspectorController.cpp file into separate classes.

        * GNUmakefile.am: Modified to include new files.
        * WebCore.pro: Ditto.
        * WebCore.scons: Ditto.
        * WebCore.vcproj/WebCore.vcproj: Ditto.
        * WebCore.xcodeproj/project.pbxproj: Ditto.
        * WebCoreSources.bkl: Ditto.
        * inspector/ConsoleMessage.cpp: Added.
        * inspector/ConsoleMessage.h: Added.
        * inspector/InspectorController.cpp:
        * inspector/InspectorDOMStorageResource.cpp: Added.
        * inspector/InspectorDOMStorageResource.h: Added.
        * inspector/InspectorDatabaseResource.cpp: Added.
        * inspector/InspectorDatabaseResource.h: Added.